--- a/package.json
+++ b/package.json
@@ -6,14 +6,25 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@cap-js-community/odata-v2-adapter": "^1.13.7",
+    "@cap-js/postgres": "^1.11.0",
     "@sap/cds": "^8",
-    "express": "^4"
+    "bcryptjs": "^2.4.3",
+    "cds-pg": "^0.1.36",
+    "cors": "^2.8.5",
+    "express": "^4",
+    "handlebars": "^4.7.8",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.16",
+    "sap-cap-validator-plugin": "^0.0.2"
   },
   "devDependencies": {
-    "@cap-js/sqlite": "^1",
-    "@cap-js/cds-types": "^0.6"
+    "@cap-js/cds-types": "^0.6",
+    "@cap-js/sqlite": "^1"
   },
   "scripts": {
-    "start": "cds-serve"
-  }
+    "start": "cds-serve",
+    "watch-admin": "cds watch --open admin/webapp/index.html?sap-ui-xx-viewCache=false"
+  },
+  "sapuxLayer": "CUSTOMER_BASE"
 }
