--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "scripts": {
     "start": "cds-serve",
-    "watch-admin": "cds watch --open admin/webapp/index.html?sap-ui-xx-viewCache=false"
+    "watch-admin": "cds watch --open admin/webapp/index.html?sap-ui-xx-viewCache=false",
+    "watch-nexus": "cds watch --open nexus/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "sapuxLayer": "CUSTOMER_BASE"
 }
